# EiT-Calibration

./: .gitignore
camera_calibration/: CMakeLists.txt  camera_calibration.cpp  camera_calibration.h
camera_calibration/data/: cali_0.csv  cali_1.csv  cali_10.csv  cali_11.csv  cali_12.csv  cali_13.csv  cali_14.csv  cali_15.csv  cali_16.csv  cali_17.csv  cali_18.csv  cali_2.csv  cali_3.csv  cali_4.csv  cali_5.csv  cali_6.csv  cali_7.csv  cali_8.csv  cali_9.csv
camera_calibration/src/: calibration.py  camera_calibration.cpp  camera_calibration.h
